--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   </style>
 </head>
 <body>
-  <script type="module">
-    import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.160.1/build/three.module.js';
-    import { FontLoader } from 'https://cdn.jsdelivr.net/npm/three@0.160.1/examples/jsm/loaders/FontLoader.js';
-    import { TextGeometry } from 'https://cdn.jsdelivr.net/npm/three@0.160.1/examples/jsm/geometries/TextGeometry.js';
-
+  <!-- Naudojame paprastą script įkėlimą -->
+  <script src="https://cdn.jsdelivr.net/npm/three@0.160.1/build/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.160.1/examples/js/loaders/FontLoader.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.160.1/examples/js/geometries/TextGeometry.js"></script>
+  <script>
     const scene = new THREE.Scene();
     const camera = new THREE.PerspectiveCamera(60, window.innerWidth / window.innerHeight, 0.1, 1000);
     camera.position.z = 60;
@@ -35,11 +35,11 @@
     const ambient = new THREE.AmbientLight(0xffffff, 0.5);
     scene.add(ambient);
 
-    const loader = new FontLoader();
+    const loader = new THREE.FontLoader();
     loader.load(
       'https://threejs.org/examples/fonts/helvetiker_regular.typeface.json',
       function (font) {
-        const geometry = new TextGeometry('MBC', {
+        const geometry = new THREE.TextGeometry('MBC', {
           font: font,
           size: 10,
           height: 5,
@@ -70,12 +70,6 @@
         }
 
         animate();
-      },
-      // onProgress (optional)
-      undefined,
-      // onError
-      function (err) {
-        console.error('Font loading error:', err);
       }
     );
 
