--- a/index.html
+++ b/index.html
@@ -1,74 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>3D Glowing MBC</title>
+  <meta charset="UTF-8" />
+  <title>Spinning MBC</title>
   <style>
     body {
       margin: 0;
-      background-color: black;
+      background: #111;
       overflow: hidden;
-    }
-    canvas {
-      display: block;
     }
   </style>
 </head>
 <body>
   <script src="https://cdn.jsdelivr.net/npm/three@0.160.1/build/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.160.1/examples/js/loaders/FontLoader.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.160.1/examples/js/geometries/TextGeometry.js"></script>
+  <script src="https://threejs.org/examples/js/loaders/FontLoader.js"></script>
+  <script src="https://threejs.org/examples/js/geometries/TextGeometry.js"></script>
   <script>
     const scene = new THREE.Scene();
-    const camera = new THREE.PerspectiveCamera(60, window.innerWidth / window.innerHeight, 0.1, 1000);
+    const camera = new THREE.PerspectiveCamera(60, window.innerWidth/window.innerHeight, 0.1, 1000);
     camera.position.z = 70;
 
-    const renderer = new THREE.WebGLRenderer({ antialias: true });
+    const renderer = new THREE.WebGLRenderer();
     renderer.setSize(window.innerWidth, window.innerHeight);
     document.body.appendChild(renderer.domElement);
-
-    // Bright light
-    const light = new THREE.PointLight(0x00ffff, 3, 200);
-    light.position.set(0, 30, 60);
-    scene.add(light);
-
-    // Extra light from other side
-    const backlight = new THREE.PointLight(0xffffff, 1, 200);
-    backlight.position.set(0, -30, -60);
-    scene.add(backlight);
-
-    const ambient = new THREE.AmbientLight(0xffffff, 1);
-    scene.add(ambient);
 
     const loader = new THREE.FontLoader();
     loader.load('https://threejs.org/examples/fonts/helvetiker_bold.typeface.json', function (font) {
       const geometry = new THREE.TextGeometry('MBC', {
         font: font,
-        size: 10,
-        height: 6,
-        curveSegments: 12,
-        bevelEnabled: true,
-        bevelThickness: 1,
-        bevelSize: 0.5,
-        bevelOffset: 0,
-        bevelSegments: 8
+        size: 12,
+        height: 4,
+        bevelEnabled: false
       });
 
       geometry.center();
 
-      const material = new THREE.MeshStandardMaterial({
-        color: 0x00ffff,
-        emissive: 0x00ffff,
-        metalness: 1,
-        roughness: 0.2
-      });
-
-      const textMesh = new THREE.Mesh(geometry, material);
-      scene.add(textMesh);
+      const material = new THREE.MeshBasicMaterial({ color: 0xffffff, wireframe: false });
+      const mesh = new THREE.Mesh(geometry, material);
+      scene.add(mesh);
 
       function animate() {
         requestAnimationFrame(animate);
-        textMesh.rotation.y += 0.01;
+        mesh.rotation.y += 0.01;
         renderer.render(scene, camera);
       }
 
