--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="lt">
 <head>
   <meta charset="UTF-8">
-  <title>Timeris iki 17:00</title>
+  <title>Mode pasiduchino</title>
   <style>
     body {
       margin: 0;
@@ -20,32 +20,43 @@
     #timer {
       font-size: 60px;
       margin-bottom: 20px;
+      color: #0f0;
     }
 
     #message {
-      font-size: 24px;
+      font-size: 28px;
       color: #ff4b4b;
-      opacity: 0;
-      transition: opacity 1s ease;
-    }
-
-    #message.visible {
-      opacity: 1;
     }
   </style>
 </head>
 <body>
   <div id="timer">00:00:00</div>
-  <div id="message">Mode pasigaidins...</div>
+  <div id="message">Mode pasiduchino</div>
 
   <script>
     function updateTimer() {
       const now = new Date();
-      const target = new Date();
-      target.setHours(17, 0, 0, 0);
 
-      const diff = target - now;
+      // Lietuvos laikas (UTC+2 arba +3 vasarą)
+      const offsetHours = 3; // vasaros metu (+3), kitu metu naudok +2
+      const local = new Date(now.getTime() + (offsetHours - now.getTimezoneOffset() / 60) * 60 * 60 * 1000);
 
-      if (diff <= 0) {
-        // 17:00 jau atėjo
-        document.getElement
+      const today17 = new Date(local);
+      today17.setHours(17, 0, 0, 0);
+
+      let diff = local - today17;
+
+      if (diff < 0) diff = 0; // dar nepraėjo 17:00, rodom 00:00:00
+
+      const hours = String(Math.floor(diff / (1000 * 60 * 60))).padStart(2, '0');
+      const minutes = String(Math.floor((diff / (1000 * 60)) % 60)).padStart(2, '0');
+      const seconds = String(Math.floor((diff / 1000) % 60)).padStart(2, '0');
+
+      document.getElementById('timer').textContent = `${hours}:${minutes}:${seconds}`;
+    }
+
+    updateTimer();
+    setInterval(updateTimer, 1000);
+  </script>
+</body>
+</html>
