--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="lt">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Mode pasiduchino</title>
   <style>
     body {
@@ -24,8 +24,21 @@
     }
 
     #message {
-      font-size: 28px;
-      color: #ff4b4b;
+      font-size: 36px;
+      color: #ff4444;
+      text-shadow: 0 0 15px red;
+      opacity: 0;
+      animation: pulse 2s infinite;
+      transition: opacity 0.5s ease;
+    }
+
+    #message.visible {
+      opacity: 1;
+    }
+
+    @keyframes pulse {
+      0%, 100% { opacity: 1; }
+      50% { opacity: 0.3; }
     }
   </style>
 </head>
@@ -37,26 +50,7 @@
     function updateTimer() {
       const now = new Date();
 
-      // Lietuvos laikas (UTC+2 arba +3 vasarą)
-      const offsetHours = 3; // vasaros metu (+3), kitu metu naudok +2
-      const local = new Date(now.getTime() + (offsetHours - now.getTimezoneOffset() / 60) * 60 * 60 * 1000);
-
-      const today17 = new Date(local);
-      today17.setHours(17, 0, 0, 0);
-
-      let diff = local - today17;
-
-      if (diff < 0) diff = 0; // dar nepraėjo 17:00, rodom 00:00:00
-
-      const hours = String(Math.floor(diff / (1000 * 60 * 60))).padStart(2, '0');
-      const minutes = String(Math.floor((diff / (1000 * 60)) % 60)).padStart(2, '0');
-      const seconds = String(Math.floor((diff / 1000) % 60)).padStart(2, '0');
-
-      document.getElementById('timer').textContent = `${hours}:${minutes}:${seconds}`;
-    }
-
-    updateTimer();
-    setInterval(updateTimer, 1000);
-  </script>
-</body>
-</html>
+      // Nustatome laiką pagal Lietuvos laiko zoną (Europe/Vilnius)
+      const formatter = new Intl.DateTimeFormat("lt-LT", {
+        timeZone: "Europe/Vilnius",
+        hour: "2-digit",
