--- a/index.html
+++ b/index.html
@@ -1,52 +1,34 @@
 <!DOCTYPE html>
 <html lang="lt">
 <head>
-  <meta charset="UTF-8" />
-  <title>Mode Dx</title>
+  <meta charset="UTF-8">
+  <title>Mode Dx – Orbitinis</title>
   <style>
     body {
       margin: 0;
-      background-color: #111;
+      background: #111;
+      color: white;
       font-family: 'Segoe UI', sans-serif;
-      height: 100vh;
       overflow: hidden;
+      height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-    }
-
-    #container {
       position: relative;
-      width: 400px;
-      height: 400px;
     }
 
     #timer {
-      font-size: 60px;
+      font-size: 64px;
       color: grey;
       position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      z-index: 2;
+      z-index: 1;
     }
 
     #message {
+      position: absolute;
       font-size: 28px;
       color: white;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform-origin: -160px center;
-      animation:
-        rotate 10s linear infinite,
-        pulse 2s ease-in-out infinite;
-      white-space: nowrap;
-    }
-
-    @keyframes rotate {
-      0%   { transform: rotate(0deg) translateX(200px) rotate(0deg); }
-      100% { transform: rotate(360deg) translateX(200px) rotate(-360deg); }
+      animation: pulse 2s infinite ease-in-out;
     }
 
     @keyframes pulse {
@@ -57,16 +39,19 @@
 </head>
 <body>
 
-  <div id="container">
-    <div id="timer">00:00:00</div>
-    <div id="message">Mode Dx</div>
-  </div>
+  <div id="timer">00:00:00</div>
+  <div id="message">Mode Dx</div>
 
   <script>
+    const timer = document.getElementById('timer');
+    const message = document.getElementById('message');
+
+    let angle = 0;
+    const radius = 150;
+
     function updateTimer() {
       const now = new Date();
 
-      // Vilniaus laikas
       const formatter = new Intl.DateTimeFormat('lt-LT', {
         timeZone: 'Europe/Vilnius',
         hour: '2-digit',
@@ -86,16 +71,4 @@
       let passed = currentSeconds - targetSeconds;
       if (passed < 0) passed = 0;
 
-      const h = String(Math.floor(passed / 3600)).padStart(2, '0');
-      const m = String(Math.floor((passed % 3600) / 60)).padStart(2, '0');
-      const s = String(passed % 60).padStart(2, '0');
-
-      document.getElementById('timer').textContent = `${h}:${m}:${s}`;
-    }
-
-    updateTimer();
-    setInterval(updateTimer, 1000);
-  </script>
-
-</body>
-</html>
+      const h = String(Math.floor(passed / 3600)).
