--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="lt">
 <head>
   <meta charset="UTF-8">
-  <title>Mode Dx – Orbitinis</title>
+  <title>Mode Dx Orbit</title>
   <style>
     body {
       margin: 0;
@@ -11,16 +11,15 @@
       font-family: 'Segoe UI', sans-serif;
       overflow: hidden;
       height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      position: relative;
     }
 
     #timer {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
       font-size: 64px;
       color: grey;
-      position: absolute;
       z-index: 1;
     }
 
@@ -29,6 +28,8 @@
       font-size: 28px;
       color: white;
       animation: pulse 2s infinite ease-in-out;
+      white-space: nowrap;
+      z-index: 0;
     }
 
     @keyframes pulse {
@@ -45,9 +46,8 @@
   <script>
     const timer = document.getElementById('timer');
     const message = document.getElementById('message');
-
     let angle = 0;
-    const radius = 150;
+    const radius = 160;
 
     function updateTimer() {
       const now = new Date();
@@ -71,4 +71,31 @@
       let passed = currentSeconds - targetSeconds;
       if (passed < 0) passed = 0;
 
-      const h = String(Math.floor(passed / 3600)).
+      const h = String(Math.floor(passed / 3600)).padStart(2, '0');
+      const m = String(Math.floor((passed % 3600) / 60)).padStart(2, '0');
+      const s = String(passed % 60).padStart(2, '0');
+
+      timer.textContent = `${h}:${m}:${s}`;
+    }
+
+    function animateOrbit() {
+      const centerX = window.innerWidth / 2;
+      const centerY = window.innerHeight / 2;
+
+      const x = centerX + radius * Math.cos(angle);
+      const y = centerY + radius * Math.sin(angle);
+
+      message.style.left = `${x}px`;
+      message.style.top = `${y}px`;
+
+      angle += 0.01;
+      requestAnimationFrame(animateOrbit);
+    }
+
+    updateTimer();
+    setInterval(updateTimer, 1000);
+    animateOrbit();
+  </script>
+
+</body>
+</html>
