--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="lt">
 <head>
   <meta charset="UTF-8" />
-  <title>Mode Dx Orbit</title>
+  <title>Mode Dx Orbit + Progress</title>
   <style>
     body {
       margin: 0;
       background: #111;
       font-family: 'Segoe UI', sans-serif;
+      color: white;
       overflow: hidden;
       height: 100vh;
     }
@@ -19,6 +20,7 @@
       transform: translate(-50%, -50%);
       font-size: 64px;
       color: grey;
+      z-index: 1;
     }
 
     #message {
@@ -27,6 +29,26 @@
       color: white;
       animation: pulse 2s infinite ease-in-out;
       white-space: nowrap;
+      z-index: 0;
+    }
+
+    #progress-container {
+      position: absolute;
+      bottom: 50px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 60%;
+      height: 25px;
+      background-color: #333;
+      border-radius: 20px;
+      overflow: hidden;
+    }
+
+    #progress-bar {
+      height: 100%;
+      width: 0%;
+      background: linear-gradient(90deg, #0f0, #6f0);
+      transition: width 0.1s linear;
     }
 
     @keyframes pulse {
@@ -37,33 +59,40 @@
 </head>
 <body>
 
-  <div id="timer">Kraunasi...</div>
+  <div id="timer">00:00:00</div>
   <div id="message">Mode Dx</div>
+  <div id="progress-container">
+    <div id="progress-bar"></div>
+  </div>
 
   <script>
-    const timer = document.getElementById("timer");
-    const message = document.getElementById("message");
+    const timer = document.getElementById('timer');
+    const message = document.getElementById('message');
+    const progressBar = document.getElementById('progress-bar');
     let angle = 0;
     const radius = 160;
+    let progress = 0;
 
-    let timeOffset = 0;
-
-    async function fetchVilniusTimeOffset() {
-      const res = await fetch('https://worldtimeapi.org/api/timezone/Europe/Vilnius');
-      const data = await res.json();
-      const serverTime = new Date(data.datetime);
-      const localTime = new Date();
-      timeOffset = serverTime.getTime() - localTime.getTime();
+    function getVilniusParts() {
+      const now = new Date();
+      const formatter = new Intl.DateTimeFormat('lt-LT', {
+        timeZone: 'Europe/Vilnius',
+        hour: '2-digit',
+        minute: '2-digit',
+        second: '2-digit',
+        hour12: false
+      });
+      const parts = formatter.formatToParts(now);
+      const hour = +parts.find(p => p.type === 'hour').value;
+      const minute = +parts.find(p => p.type === 'minute').value;
+      const second = +parts.find(p => p.type === 'second').value;
+      return { hour, minute, second };
     }
 
     function updateTimer() {
-      const now = new Date(Date.now() + timeOffset);
+      const { hour, minute, second } = getVilniusParts();
 
-      const hours = now.getHours();
-      const minutes = now.getMinutes();
-      const seconds = now.getSeconds();
-
-      const totalNowSec = hours * 3600 + minutes * 60 + seconds;
+      const totalNowSec = hour * 3600 + minute * 60 + second;
       const targetSec = 17 * 3600;
 
       let diff = totalNowSec - targetSec;
@@ -90,12 +119,16 @@
       requestAnimationFrame(animateOrbit);
     }
 
-    // Start everything
-    fetchVilniusTimeOffset().then(() => {
-      updateTimer();
-      setInterval(updateTimer, 1000);
-      animateOrbit();
-    });
+    function animateProgress() {
+      progress += 0.03;
+      if (progress > 10000) progress = 0; // Begalybės imitacija
+      progressBar.style.width = `${(progress % 100).toFixed(2)}%`;
+    }
+
+    setInterval(updateTimer, 1000);
+    setInterval(animateProgress, 50);
+    animateOrbit();
+    updateTimer();
   </script>
 </body>
 </html>
